# glacier-contacts

./: CMakeLists.txt  glacier-contacts.desktop  glacier-contacts.pro
rpm/: glacier-contacts.spec
src/: CMakeLists.txt  glacier-contacts.desktop  glacier-contacts.privileges  main.cpp
src/qml/: AvatarPickerSheet.qml  ContactCardContentWidget.qml  ContactCardPage.qml  ContactEditorSheet.qml  ContactImportSheet.qml  ContactListPage.qml  DeleteContactDialog.qml  EditableList.qml  MessagesInterface.qml  SearchBox.qml  glacier-contacts.qml  glacier-contacts.qrc  main.qml
src/qml/api/: ContactAvatarImage.qml  ContactListDelegate.qml  ContactListWidget.qml
src/qml/components/: AvatarPickerSheet.qml  ContactCardContentWidget.qml  ContactImportSheet.qml  DeleteContactDialog.qml  EditableList.qml  SearchBox.qml
src/qml/pages/: ContactAggListPage.qml  ContactCardPage.qml  ContactEditPage.qml  ContactListPage.qml
translations/: glacier-contacts.ts  glacier-contacts_cs.ts  glacier-contacts_de.ts  glacier-contacts_en.ts  glacier-contacts_fi.ts  glacier-contacts_fr.ts  glacier-contacts_pl.ts  glacier-contacts_ro.ts  glacier-contacts_ru.ts  glacier-contacts_uk.ts
